// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionsTableComponent should snap like in home page with 2 sessions sorted by start date 1`] = `
<tm-sessions-table
  FeedbackSessionPublishStatus={[Function Object]}
  FeedbackSessionSubmissionStatus={[Function Object]}
  SessionsTableColumn={[Function Object]}
  SessionsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  columnsToShow={[Function Array]}
  copySessionEvent={[Function EventEmitter]}
  courseCandidates={[Function Array]}
  downloadSessionResultsEvent={[Function EventEmitter]}
  editSessionEvent={[Function EventEmitter]}
  headerColorScheme="0"
  loadResponseRateEvent={[Function EventEmitter]}
  moveSessionToRecycleBinEvent={[Function EventEmitter]}
  ngbModal={[Function NgbModal]}
  publishSessionEvent={[Function EventEmitter]}
  resendResultsLinkToStudentsEvent={[Function EventEmitter]}
  sendRemindersToStudentsEvent={[Function EventEmitter]}
  sessionsTableRowModels={[Function Array]}
  sessionsTableRowModelsSortBy={[Function Number]}
  sessionsTableRowModelsSortOrder={[Function Number]}
  simpleModalService={[Function SimpleModalService]}
  sortSessionsTableRowModelsEvent={[Function EventEmitter]}
  submitSessionAsInstructorEvent={[Function EventEmitter]}
  unpublishSessionEvent={[Function EventEmitter]}
  viewSessionResultEvent={[Function EventEmitter]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            
            <th
              class="sortable-header"
            >
               Session Name 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            
            <th
              class="sortable-header"
            >
               Start Date 
              
              
              
              <span>
                <i
                  class="fas fa-sort-up"
                />
              </span>
            </th>
            
            <th
              class="sortable-header"
            >
               End Date 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th>
              Submissions
            </th>
            <th>
              Responses
            </th>
            <th
              container="body"
              ngbtooltip="Number of students submitted / Class size"
            >
              <span>
                Response Rate
              </span>
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            <td>
              Season 8 Review
            </td>
            
            <td>
              <span>
                19 Jan 7:30 AM
              </span>
            </td>
            
            <td>
              <span>
                19 Jan 7:32 AM
              </span>
            </td>
            <td>
              <span>
                Open
              </span>
            </td>
            <td>
              <span>
                Not Published
              </span>
            </td>
            <td>
              
              
              <div>
                8 / 9
              </div>
              
            </td>
            <td
              class="actions-cell"
            >
              <button
                class="btn btn-light btn-sm"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-light btn-sm"
                type="button"
              >
                Delete
              </button>
              <button
                class="btn btn-light btn-sm"
                ngbtooltip="Copy feedback session details"
                type="button"
              >
                Copy
              </button>
              <button
                class="btn btn-light btn-sm"
                ngbtooltip="Start submitting feedback"
                type="button"
              >
                Submit
              </button>
              <div
                class="d-inline-block dropdown"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="btn btn-light btn-sm dropdown-toggle"
                  ngbdropdowntoggle=""
                >
                  Results
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                  x-placement="bottom"
                >
                  <button
                    class="btn dropdown-item clickable"
                  >
                    View Results
                  </button>
                  
                  <button
                    class="btn dropdown-item clickable"
                    container="body"
                    ngbtooltip="Make session responses available for viewing"
                    placement="left"
                  >
                    Publish Results
                  </button>
                  
                  
                  
                  <button
                    class="btn dropdown-item clickable"
                  >
                    Download Results
                  </button>
                </div>
              </div>
              <div
                class="d-inline-block"
                ngbdropdown=""
                ngbtooltip="Send e-mails to remind students and instructors who have not submitted their feedbacks to do so"
              >
                <button
                  class="btn btn-light btn-sm"
                >
                  Remind
                </button>
              </div>
            </td>
          </tr>
          <tr>
            
            <td>
              Season 7 Review
            </td>
            
            <td>
              <span>
                19 Jan 7:13 AM
              </span>
            </td>
            
            <td>
              <span>
                19 Jan 7:15 AM
              </span>
            </td>
            <td>
              <span>
                Closed
              </span>
            </td>
            <td>
              <span>
                Published
              </span>
            </td>
            <td>
              
              
              
              <tm-ajax-loading>
                <div
                  class="loading-container"
                >
                  <div
                    class="spinner-border spinner-border-sm text-white"
                    role="status"
                  />
                </div>
              </tm-ajax-loading>
            </td>
            <td
              class="actions-cell"
            >
              <button
                class="btn btn-light btn-sm"
                disabled=""
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-light btn-sm"
                disabled=""
                type="button"
              >
                Delete
              </button>
              <button
                class="btn btn-light btn-sm"
                ngbtooltip="Copy feedback session details"
                type="button"
              >
                Copy
              </button>
              <button
                class="btn btn-light btn-sm"
                disabled=""
                ngbtooltip="Start submitting feedback"
                type="button"
              >
                Submit
              </button>
              <div
                class="d-inline-block dropdown"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="btn btn-light btn-sm dropdown-toggle"
                  ngbdropdowntoggle=""
                >
                  Results
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                  x-placement="bottom"
                >
                  <button
                    class="btn dropdown-item clickable"
                  >
                    View Results
                  </button>
                  
                  <button
                    class="btn dropdown-item clickable"
                    container="body"
                    disabled=""
                    ngbtooltip="Make responses no longer visible"
                    placement="left"
                  >
                    Unpublish Results
                  </button>
                  
                  
                  
                  <button
                    class="btn dropdown-item clickable"
                  >
                    Resend link to view results
                  </button>
                  <button
                    class="btn dropdown-item clickable"
                  >
                    Download Results
                  </button>
                </div>
              </div>
              <div
                class="d-inline-block"
                ngbdropdown=""
                ngbtooltip="Send e-mails to remind students and instructors who have not submitted their feedbacks to do so"
              >
                <button
                  class="btn btn-light btn-sm"
                  disabled=""
                >
                  Remind
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-sessions-table>
`;

exports[`SessionsTableComponent should snap like in sessions page with 2 sessions sorted by session name 1`] = `
<tm-sessions-table
  FeedbackSessionPublishStatus={[Function Object]}
  FeedbackSessionSubmissionStatus={[Function Object]}
  SessionsTableColumn={[Function Object]}
  SessionsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  columnsToShow={[Function Array]}
  copySessionEvent={[Function EventEmitter]}
  courseCandidates={[Function Array]}
  downloadSessionResultsEvent={[Function EventEmitter]}
  editSessionEvent={[Function EventEmitter]}
  headerColorScheme="0"
  loadResponseRateEvent={[Function EventEmitter]}
  moveSessionToRecycleBinEvent={[Function EventEmitter]}
  ngbModal={[Function NgbModal]}
  publishSessionEvent={[Function EventEmitter]}
  resendResultsLinkToStudentsEvent={[Function EventEmitter]}
  sendRemindersToStudentsEvent={[Function EventEmitter]}
  sessionsTableRowModels={[Function Array]}
  sessionsTableRowModelsSortBy={[Function Number]}
  sessionsTableRowModelsSortOrder={[Function Number]}
  simpleModalService={[Function SimpleModalService]}
  sortSessionsTableRowModelsEvent={[Function EventEmitter]}
  submitSessionAsInstructorEvent={[Function EventEmitter]}
  unpublishSessionEvent={[Function EventEmitter]}
  viewSessionResultEvent={[Function EventEmitter]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            
            <th
              class="sortable-header"
            >
               Course ID 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Session Name 
              
              
              
              <span>
                <i
                  class="fas fa-sort-up"
                />
              </span>
            </th>
            
            
            <th>
              Submissions
            </th>
            <th>
              Responses
            </th>
            <th
              container="body"
              ngbtooltip="Number of students submitted / Class size"
            >
              <span>
                Response Rate
              </span>
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            <td>
              GOT
            </td>
            <td>
              Season 8 Review
            </td>
            
            
            <td>
              <span>
                Open
              </span>
            </td>
            <td>
              <span>
                Not Published
              </span>
            </td>
            <td>
              
              
              <div>
                8 / 9
              </div>
              
            </td>
            <td
              class="actions-cell"
            >
              <button
                class="btn btn-light btn-sm"
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-light btn-sm"
                type="button"
              >
                Delete
              </button>
              <button
                class="btn btn-light btn-sm"
                ngbtooltip="Copy feedback session details"
                type="button"
              >
                Copy
              </button>
              <button
                class="btn btn-light btn-sm"
                ngbtooltip="Start submitting feedback"
                type="button"
              >
                Submit
              </button>
              <div
                class="d-inline-block dropdown"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="btn btn-light btn-sm dropdown-toggle"
                  ngbdropdowntoggle=""
                >
                  Results
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                  x-placement="bottom"
                >
                  <button
                    class="btn dropdown-item clickable"
                  >
                    View Results
                  </button>
                  
                  <button
                    class="btn dropdown-item clickable"
                    container="body"
                    ngbtooltip="Make session responses available for viewing"
                    placement="left"
                  >
                    Publish Results
                  </button>
                  
                  
                  
                  <button
                    class="btn dropdown-item clickable"
                  >
                    Download Results
                  </button>
                </div>
              </div>
              <div
                class="d-inline-block"
                ngbdropdown=""
                ngbtooltip="Send e-mails to remind students and instructors who have not submitted their feedbacks to do so"
              >
                <button
                  class="btn btn-light btn-sm"
                >
                  Remind
                </button>
              </div>
            </td>
          </tr>
          <tr>
            
            <td>
              GOT
            </td>
            <td>
              Season 7 Review
            </td>
            
            
            <td>
              <span>
                Closed
              </span>
            </td>
            <td>
              <span>
                Published
              </span>
            </td>
            <td>
              
              
              
              <tm-ajax-loading>
                <div
                  class="loading-container"
                >
                  <div
                    class="spinner-border spinner-border-sm text-white"
                    role="status"
                  />
                </div>
              </tm-ajax-loading>
            </td>
            <td
              class="actions-cell"
            >
              <button
                class="btn btn-light btn-sm"
                disabled=""
                type="button"
              >
                Edit
              </button>
              <button
                class="btn btn-light btn-sm"
                disabled=""
                type="button"
              >
                Delete
              </button>
              <button
                class="btn btn-light btn-sm"
                ngbtooltip="Copy feedback session details"
                type="button"
              >
                Copy
              </button>
              <button
                class="btn btn-light btn-sm"
                disabled=""
                ngbtooltip="Start submitting feedback"
                type="button"
              >
                Submit
              </button>
              <div
                class="d-inline-block dropdown"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="btn btn-light btn-sm dropdown-toggle"
                  ngbdropdowntoggle=""
                >
                  Results
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                  x-placement="bottom"
                >
                  <button
                    class="btn dropdown-item clickable"
                  >
                    View Results
                  </button>
                  
                  <button
                    class="btn dropdown-item clickable"
                    container="body"
                    disabled=""
                    ngbtooltip="Make responses no longer visible"
                    placement="left"
                  >
                    Unpublish Results
                  </button>
                  
                  
                  
                  <button
                    class="btn dropdown-item clickable"
                  >
                    Resend link to view results
                  </button>
                  <button
                    class="btn dropdown-item clickable"
                  >
                    Download Results
                  </button>
                </div>
              </div>
              <div
                class="d-inline-block"
                ngbdropdown=""
                ngbtooltip="Send e-mails to remind students and instructors who have not submitted their feedbacks to do so"
              >
                <button
                  class="btn btn-light btn-sm"
                  disabled=""
                >
                  Remind
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-sessions-table>
`;

exports[`SessionsTableComponent should snap with default fields 1`] = `
<tm-sessions-table
  FeedbackSessionPublishStatus={[Function Object]}
  FeedbackSessionSubmissionStatus={[Function Object]}
  SessionsTableColumn={[Function Object]}
  SessionsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  columnsToShow={[Function Array]}
  copySessionEvent={[Function EventEmitter]}
  courseCandidates={[Function Array]}
  downloadSessionResultsEvent={[Function EventEmitter]}
  editSessionEvent={[Function EventEmitter]}
  headerColorScheme="0"
  loadResponseRateEvent={[Function EventEmitter]}
  moveSessionToRecycleBinEvent={[Function EventEmitter]}
  ngbModal={[Function NgbModal]}
  publishSessionEvent={[Function EventEmitter]}
  resendResultsLinkToStudentsEvent={[Function EventEmitter]}
  sendRemindersToStudentsEvent={[Function EventEmitter]}
  sessionsTableRowModels={[Function Array]}
  sessionsTableRowModelsSortBy="0"
  sessionsTableRowModelsSortOrder={[Function Number]}
  simpleModalService={[Function SimpleModalService]}
  sortSessionsTableRowModelsEvent={[Function EventEmitter]}
  submitSessionAsInstructorEvent={[Function EventEmitter]}
  unpublishSessionEvent={[Function EventEmitter]}
  viewSessionResultEvent={[Function EventEmitter]}
>
  <div
    class="no-session-message"
  >
     There are no feedback sessions in this course. 
  </div>
</tm-sessions-table>
`;
